--- a/views/index.ejs
+++ b/views/index.ejs
@@ -538,7 +538,7 @@
         </div>
         <style>
           header.masthead{
-            background-image: url(https://static.aproveitaabc.com.br/images/5013_doce.png);
+            background-image: url(/500_F_284320575_23fO7i1VcGbm14LMvzj7xxopQyKATveM.jpg);
           }
         </style>
         <!-- Bootstrap core JS-->
