--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">Kitutes Donatê</div>
+                <div class="masthead-heading text-uppercase">99 QUITUTES</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://api.whatsapp.com/send?phone=5511957807970&text=Oi%20quero%20encomendar%20100%20produtos" target="_blank">Encomendar</a>
             </div>
         </header>
@@ -538,7 +538,7 @@
         </div>
         <style>
           header.masthead{
-            background-image: url(/500_F_284320575_23fO7i1VcGbm14LMvzj7xxopQyKATveM.jpg);
+            background-image: url("/500_F_284320575_23fO7i1VcGbm14LMvzj7xxopQyKATveM.jpg");
           }
         </style>
         <!-- Bootstrap core JS-->
